@@ -1,3 +1,8 @@
+Mon Oct  8 14:46:45 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/Vertex.java (appendNeighboursTri): A
+	boundary point could be omitted in appendNeighboursTri().
+
 Sat Oct  6 21:21:08 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/HalfEdge.java (collapse): Fix edge
